Add: dark mode, code tidying ... (wip)

--- a/src/component/button/_Button.scss
+++ b/src/component/button/_Button.scss
@@ -5,7 +5,7 @@
   width: #{$width}px;
   height: #{$height}px;
   background-color: $color;
-  color: #fff;
+  color: var(--color-text-white);
 
   border-radius: 5px;
 
