--- a/src/component/lecture-card/lecture-card-element/session-count/_LectureSessionCount.scss
+++ b/src/component/lecture-card/lecture-card-element/session-count/_LectureSessionCount.scss
@@ -1,4 +1,6 @@
 .lectureCard--session-count {
-  display:flex;
-  flex-direction: row;  
+  display: flex;
+  flex-direction: row;
+
+  color: var(--color-text-black);
 }
