--- a/src/component/lecture-card/lecture-card-element/title/_LectureTitle.scss
+++ b/src/component/lecture-card/lecture-card-element/title/_LectureTitle.scss
@@ -3,6 +3,8 @@
 
   font-size: 1.3rem;
   word-wrap: break-word;
+
+  color: var(--color-text-black);
 }
 
 .lecturePopup--title {
@@ -13,4 +15,6 @@
   font-weight: 700;
   text-align: center;
   word-wrap: break-word;
+
+  color: var(--color-text-black);
 }
