--- a/src/page/main/search-result/view/_GridView.scss
+++ b/src/page/main/search-result/view/_GridView.scss
@@ -1,3 +1,5 @@
+@import "../../../../common/ColorScheme";
+
 .gridView {
   display: flex;
   flex-direction: row;
@@ -12,7 +14,7 @@
   margin: 5% 0;
 
 
-  border: 2px dashed #000;
+  border: 2px dashed var(--color-border-default);
 
   list-style-type: none;
 }
