--- a/src/auth/_Auth.scss
+++ b/src/auth/_Auth.scss
@@ -1,3 +1,5 @@
+@import "../common/BoxShadow";
+
 .authCtrl {
   display: flex;
   flex-direction: column;
@@ -6,8 +8,7 @@
 
   padding: 25px 20px;
 
-  // border: 2px dashed #a2a2a2;
-  // border-radius: 20%;
+  transform: scale(1.3);
 
   .authBtn {
     display: flex;
@@ -20,6 +21,7 @@
     &-kakao {
       width: 50%;
       height: 50%;
+      @include make-box-shadow(0, 1, 1, 0.1, #b8b8b8);
 
       img {
         display: block;
@@ -32,7 +34,8 @@
 
     &-google {
       width: 50%;
-      height: 110%;
+      height: 140%;
+      // @include make-box-shadow(0.5, 0.5, 1);
     }
   }
 }
