--- a/src/common/_ColorScheme.scss
+++ b/src/common/_ColorScheme.scss
@@ -16,3 +16,11 @@ $color-footer: #535353;
 // keyword
 $color-selected: #5900ff;
 $color-not-selected: #1a0049;
+
+// border
+$color-border-default: #000;
+$color-border-darker: #444;
+
+// text
+$color-text-white: #fff;
+$color-text-black: #000;
