--- a/src/component/comment/_OtherComment.scss
+++ b/src/component/comment/_OtherComment.scss
@@ -6,7 +6,7 @@ $left-offset: 56%;
   display: flex;
   flex-direction: row;
 
-  border: 1px solid #000;
+  border: 1px solid var(--color-border-default);
   background-color: rgba(155, 155, 155, 0.15);
 
   padding: 5px;
