--- a/src/component/comment/comment-element/contents/_CommentContents.scss
+++ b/src/component/comment/comment-element/contents/_CommentContents.scss
@@ -1,5 +1,8 @@
+@import "../../../../common/ColorScheme";
+
 .comment--contents {
-  border: 1px dashed #000;
+  border: 1px dashed var(--color-border-default);
+  color: var(--color-text-black);
   border-radius: 5px;
   padding: 5px 15px;
   width: 100%;
