--- a/src/component/comment/comment-element/text-area/_CommentTextArea.scss
+++ b/src/component/comment/comment-element/text-area/_CommentTextArea.scss
@@ -1,7 +1,10 @@
+@import "../../../../common/ColorScheme";
+
 .comment--text-area {
   resize: none;
   
   width: 100%;
   background-color: #fff;
-  border: 1px solid #000;  
+  color: var(--color-text-black);
+  border: 1px solid var(--color-border-default);  
 }
