--- a/src/component/lecture-card/lecture-card-element/skills/_LectureSkills.scss
+++ b/src/component/lecture-card/lecture-card-element/skills/_LectureSkills.scss
@@ -1,6 +1,10 @@
+@import "../../../../common/ColorScheme";
+
 .lectureCard--skills {
   display: flex;
   flex-direction: row;
+
+  color: var(--color-text-black);
 
   i {
     text-align: center;
@@ -15,7 +19,7 @@
 
   li {
     padding: 2px 15px;
-    border: 1px solid #000;
+    border: 1px solid var(--color-border-default);
     border-radius: 25px;
 
   }
