--- a/src/component/lecture-card/lecture-card-element/thumbnail/_LectureThumbnail.scss
+++ b/src/component/lecture-card/lecture-card-element/thumbnail/_LectureThumbnail.scss
@@ -7,6 +7,8 @@
 
   border-radius: 15px;
   margin-bottom: 25px;  
+
+  color: var(--color-text-black);
 }
 
 .lecturePopup--thumbnail {
@@ -17,4 +19,6 @@
 
   max-width: 80%;
   max-height: 80%;
+
+  color: var(--color-text-black);
 }
