--- a/src/page/landing/landing-info-item/_LandingInfoItem.scss
+++ b/src/page/landing/landing-info-item/_LandingInfoItem.scss
@@ -1,3 +1,5 @@
+@import "../../common/ColorScheme";
+
 .landing-info-items {
   height: 100%;
   display: flex;
@@ -8,7 +10,7 @@
 .landing-info-item {
   width: 45%;
   background-color: rgba(200, 200, 200, 0.5);
-  border: 2px dashed #b3b3b3;
+  border: 2px dashed var(--color-border-default);
   height: 100%;
   border-radius: 20%;
 
@@ -42,11 +44,11 @@
     align-items: flex-start;
     flex-wrap: wrap;
 
-    border: 3px solid #f1f1f1;
+    border: 3px solid var(--color-border-default);
     border-radius: 15%;
 
     div {
-      border: 2px solid #b2b2b2;
+      border: 2px solid var(--color-border-default);
       padding: 5px 7px;
       // margin-right: 15px;
       margin: 5px 15px;
