--- a/src/page/main/Search/search-bar/_SearchBar.scss
+++ b/src/page/main/Search/search-bar/_SearchBar.scss
@@ -7,8 +7,10 @@
   width: 750px;
   height: 400px;
 
-  border: 2px dashed #000;
+  border: 2px dashed var(--color-border-default);
   border-radius: 15px;
+
+  background-color: var(--color-text-white);
 
   // @include make-box-shadow(1, 1, 1);
 
@@ -31,7 +33,7 @@
 
     width: 550px;
     height: 50px;
-    border: 0;
+    border: none;
     border-radius: 15px;
     background-color: transparent;
 
@@ -74,9 +76,9 @@
 
     li {
       background-color: $color-warning;
-      color: #fff;
+      color: var(--color-text-white);
 
-      border: 1px solid #000;
+      border: 1px solid var(--color-border-default);
       border-radius: 15px;
       padding: 5px 15px;
       margin-right: 5px;
@@ -111,7 +113,7 @@
     li {
       color: #fff;
 
-      border: 1px solid #000;
+      border: 1px solid var(--color-border-default);
       border-radius: 15px;
       padding: 5px 15px;
       margin-right: 5px;
@@ -128,6 +130,6 @@
     height: 1px;
 
     margin: 5px 5px;
-    border-bottom: 1px dashed #000;
+    border-bottom: 1px dashed var(--color-border-default);
   }
 }
