--- a/src/page/main/carousel/carousel-rotator/_CarouselRotator.scss
+++ b/src/page/main/carousel/carousel-rotator/_CarouselRotator.scss
@@ -14,10 +14,10 @@
   div {
     font-size: 5rem;
     background-color: rgba(177, 177, 177, 0.7);
-    color: #fff;
-    
+    color: var(--color-text-white);
+
     padding: 5px 15px;
-    border-radius: 25px;
+    border-radius: 30px;
 
     &:nth-child(1) {
       margin-left: 5%;
