--- a/src/page/main/search-result/_SearchResultSummary.scss
+++ b/src/page/main/search-result/_SearchResultSummary.scss
@@ -5,7 +5,7 @@
     width: 500px;
     padding: 10px 20px;
     margin: 0 auto;
-    border: 2px dashed #000;
+    border: 2px dashed var(--color-border-default);
     border-radius: 25px;
 
     ul {
@@ -16,7 +16,7 @@
     }
 
     li {
-      border: 1px solid #000;
+      border: 1px solid var(--color-border-default);
       border-radius: 15px;
 
       color: #fff;
